--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lru-cache": "^7.10.1",
     "next": "12.1.6",
+    "openai": "^2.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
